package edu.hitsz.prop;

public class BulletpluspropFactory extends PropFactory{
    public Bulletplusprop createprop(){return new
            Bulletplusprop(locationX, locationY, speedX, speedY);}
}
